--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,6 +1,3 @@
 ---
-# To run: ansible-galaxy collection install -r collections/requirements.yml
 collections:
-  - name: https://github.com/ibre5041/ansible_oracle_modules.git
-    type: git
-    version: main
+- ibre5041.ansible_oracle_modules
